--- a/task1/src/app/items-data-table/items-data-table.component.html
+++ b/task1/src/app/items-data-table/items-data-table.component.html
@@ -19,7 +19,7 @@
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef>Actions </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> </mat-header-cell>
       <mat-cell *matCellDef="let row">
         <button mat-raised-button (click)="editItem(row)" matTooltip="Click to Edit" class="iconbutton btn"
           color="primary">
@@ -36,8 +36,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="5"
-    [pageSizeOptions]="[5, 10, 20]">
+  <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="10"
+    [pageSizeOptions]="[10, 20, 30]">
   </mat-paginator>
   <button class="createNewItemBtn" (click)="createNewItem();">Create new item</button>
 </div>
