--- a/task1/src/app/header/header.component.html
+++ b/task1/src/app/header/header.component.html
@@ -22,9 +22,9 @@
           <div class="shoppingCart" *ngIf="shoppingCart">
             <ul>
               <li class="listElement" *ngFor="let cartItem of cartItem">
-                <div class="listEl" (click)="goToItemDetails(cartItem.id);">{{cartItem.name}} <span
+                <div class="listEl" (click)="goToItemDetails(cartItem.id);">{{cartItem.name | descriptionsize : 15}} <span
                     class="badge badge-secondary">{{cartItem.quantity}}</span> <span class="priceAndDelete">Price:
-                    {{cartItem.price*cartItem.quantity+' $'}} <button (click)="deleteItem(cartItem); event.stopPropagation();"
+                    {{cartItem.price*cartItem.quantity+' $'}} <button (click)="deleteItem(cartItem); $event.stopPropagation();"
                       class="deleteItem"><i class="fas fa-times"></i></button></span> </div>
               </li>
             </ul>
