requests to api

--- a/task1/src/app/edit-modal/edit-modal.component.html
+++ b/task1/src/app/edit-modal/edit-modal.component.html
@@ -22,5 +22,5 @@
 </div>
 <div mat-dialog-actions>
   <button (click)="closeModal();" mat-button>Cancle editing</button>
-  <button (click)="editItem(editItemForm, item.id);" mat-button>Edit</button>
+  <button (click)="editItem(editItemForm, item._id);" mat-button>Edit</button>
 </div>
