--- a/task1/src/app/edit-user-modal/edit-user-modal.component.html
+++ b/task1/src/app/edit-user-modal/edit-user-modal.component.html
@@ -15,7 +15,7 @@
     </mat-form-field>
 
     <mat-form-field class="example-full-width mr-md-3">
-      <input formControlName="password" matInput placeholder="user password" value="{{user.password}}"/>
+      <input formControlName="unhashedPass" matInput placeholder="user password" value="{{user.password}}"/>
     </mat-form-field>
 
     <button type="button" (click)="compressFile()">Upload and compress Image</button>
