--- a/task1/src/app/data-table/data-table.component.html
+++ b/task1/src/app/data-table/data-table.component.html
@@ -1,10 +1,6 @@
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
     <!-- Id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container>
 
     <!-- firstName Column -->
     <ng-container matColumnDef="firstName">
@@ -31,7 +27,7 @@
             color="primary">
             Edit
           </button>
-          <button mat-raised-button (click)="deleteUser(row.id)" matTooltip="Click to Delete" class="iconbutton btn"
+          <button mat-raised-button (click)="deleteUser(row._id)" matTooltip="Click to Delete" class="iconbutton btn"
             color="warn">
             Delete
           </button>
