--- a/task1/src/app/header/header.component.css
+++ b/task1/src/app/header/header.component.css
@@ -7,6 +7,25 @@
     flex-direction: row;
 }
 
+.signUp{
+    border: 1px solid coral;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    transition: 0.2s;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    -ms-transition: 0.2s;
+    -o-transition: 0.2s;
+}
+
+.signUp:hover{
+    background-color: coral;
+    color: #fff!important;
+}
+
 .greetingLayout {
     position: absolute;
     top: 50%;
@@ -28,7 +47,7 @@
     cursor: default;
 }
 
-.userAvatar {
+.image {
     width: 40px;
     height: 40px;
     background-color: #eee;
@@ -36,13 +55,13 @@
     position: relative;
 }
 
-.userAvatar img{
+.image img{
     width: 100%;
     height: 40px;
     
 }
 
-.userAvatar::before{
+.image::before{
     content: '';
     position: absolute;
     width: 40px;
