--- a/task1/src/app/items-data-table/items-data-table.component.html
+++ b/task1/src/app/items-data-table/items-data-table.component.html
@@ -1,11 +1,6 @@
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
 
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container>
-
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
@@ -25,7 +20,7 @@
           color="primary">
           Edit
         </button>
-        <button mat-raised-button (click)="deleteItem(row.id)" matTooltip="Click to Delete" class="iconbutton btn"
+        <button mat-raised-button (click)="deleteItem(row._id)" matTooltip="Click to Delete" class="iconbutton btn"
           color="warn">
           Delete
         </button>
