--- a/task1/src/app/user-info-page/user-info-page.component.html
+++ b/task1/src/app/user-info-page/user-info-page.component.html
@@ -4,18 +4,37 @@
     <form [formGroup]="userChangeForm" class="col-sm-4" (submit)="changeUser();">
       <div class="form-group">
         <label>First Name</label>
-        <input formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && checkInputs.firstName.errors }" type="text"
-          class="form-control" placeholder="type your first name here...">
+        <input formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && checkInputs.firstName.errors }"
+          type="text" class="form-control" placeholder="type your first name here...">
         <div *ngIf="submitted && checkInputs.firstName.errors" class="invalid-feedback">
           <div *ngIf="checkInputs.firstName.errors.required">First Name is required</div>
         </div>
       </div>
       <div class="form-group">
         <label>Second Name</label>
-        <input formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && checkInputs.lastName.errors }" type="text"
-          class="form-control" placeholder="type your second name here...">
+        <input formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && checkInputs.lastName.errors }"
+          type="text" class="form-control" placeholder="type your second name here...">
         <div *ngIf="submitted && checkInputs.lastName.errors" class="invalid-feedback">
           <div *ngIf="checkInputs.lastName.errors.required">Last Name is required</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input formControlName="email" [ngClass]="{ 'is-invalid': submitted && checkInputs.email.errors }" type="email"
+          class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+          placeholder="type your email here...">
+        <div *ngIf="submitted && checkInputs.email.errors" class="invalid-feedback">
+          <div *ngIf="checkInputs.email.errors.required">Email is required</div>
+          <div *ngIf="checkInputs.email.errors.email">Email must be a valid email address</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input formControlName="password" [ngClass]="{ 'is-invalid': submitted && checkInputs.password.errors }"
+          type="password" class="form-control" id="exampleInputPassword1" placeholder="type your password here...">
+        <div *ngIf="submitted && checkInputs.password.errors" class="invalid-feedback">
+          <div *ngIf="checkInputs.password.errors.required">Password is required</div>
+          <div *ngIf="checkInputs.password.errors.minlength">Password must be at least 6 characters</div>
         </div>
       </div>
       <div class="form-group">
