--- a/task1/src/app/shopping-cart-page/shopping-cart.component.html
+++ b/task1/src/app/shopping-cart-page/shopping-cart.component.html
@@ -3,16 +3,16 @@
         <div class="shoppingCart">
             <ul>
                 <li class="listElement" *ngFor="let cartItem of cartItem">
-                    <div class="listEl" (click)="goToItemDetails(cartItem.id);"><img src="{{cartItem.image}}"
+                    <div class="listEl" (click)="goToItemDetails(cartItem._id);"><img src="{{cartItem.image}}"
                             alt="{{cartItem.name}}">{{cartItem.name}} <span
                             class="badge badge-secondary">{{cartItem.quantity}}</span> <span
                             class="priceAndDelete">Price:
-                            {{cartItem.price}} <button (click)="deleteItem(cartItem); $event.stopPropagation();" class="deleteItem"><i
+                            {{cartItem.price*cartItem.quantity+' $'}} <button (click)="deleteItem(cartItem); $event.stopPropagation();" class="deleteItem"><i
                                     class="fas fa-times"></i></button></span> </div>
                 </li>
             </ul>
             <div class="cartBtnsLayout">
-                <span class="totalCost">Total cost: {{totalCost}}</span>
+                <span class="totalCost">Total cost: {{totalCost+'$'}}</span>
                 <button (click)="clearAllCartItems();" mat-button class="clearAllItems">Clear</button>
                 <button mat-button class="buyButton">Buy</button>
             </div>
